[package]
name = "id-wrapper"
description = "A small generic wrapper to add a unique identifier to a struct without modifying it"
license-file = "LICENSE"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/hardliner66/id-wrapper"

[dependencies]
nanoid = "0.4.0"
derive-overwrites = { version = "0.2.0", optional = true }

[features]
default = ["derive"]
derive = ["dep:derive-overwrites"]
