[package]
name = "id-wrapper-macros"
description = "An attribute macro to create a trait from an impl block, to allow overwriting functions in a way that is compatible with using an external wrapper struct"
license-file = "../LICENSE"
repository.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"